Fixed buttons style on mobile

--- a/_sass/prbaron/_buttons.scss
+++ b/_sass/prbaron/_buttons.scss
@@ -9,31 +9,35 @@
     }
 }
 
-
 // Alternate buttons
 // --------------------------------------------------
 
 .btn-default {
-  @include button-variant-pbaron($btn-default-bg, $btn-default-border);
+    @include button-variant-pbaron($btn-default-bg, $btn-default-border);
 }
+
 .btn-primary {
-  @include button-variant-pbaron($btn-primary-bg, $btn-primary-border);
+    @include button-variant-pbaron($btn-primary-bg, $btn-primary-border);
 }
+
 // Success appears as green
 .btn-success {
-  @include button-variant-pbaron($btn-success-bg, $btn-success-border);
+    @include button-variant-pbaron($btn-success-bg, $btn-success-border);
 }
+
 // Info appears as blue-green
 .btn-info {
-  @include button-variant-pbaron($btn-info-bg, $btn-info-border);
+    @include button-variant-pbaron($btn-info-bg, $btn-info-border);
 }
+
 // Warning appears as orange
 .btn-warning {
-  @include button-variant-pbaron($btn-warning-bg, $btn-warning-border);
+    @include button-variant-pbaron($btn-warning-bg, $btn-warning-border);
 }
+
 // Danger and error appear as red
 .btn-danger {
-  @include button-variant-pbaron($btn-danger-bg, $btn-danger-border);
+    @include button-variant-pbaron($btn-danger-bg, $btn-danger-border);
 }
 
 .btn-ghost {
@@ -61,5 +65,17 @@
     // Danger and error appear as red
     &.btn-danger {
         @include button-variant-ghost($btn-danger-color, $btn-danger-bg, $btn-danger-border);
+    }
+}
+
+.btn-block-xs {
+    @media screen and (max-width : $screen-xs-min) {
+        display       : block;
+        width         : 100%;
+        padding-left  : 0;
+        padding-right : 0;
+        & + .btn-block-xs {
+            margin-top : 5px;
+        }
     }
 }
